# verneanbud

./: Cargo.toml  README.md  shell.nix
migration/: Cargo.toml
migration/src/: lib.rs  m20240914_090441_ideas.rs  m20240922_075048_create_ideas.rs  m20241002_082310_create_comments.rs
src/: app.rs  errors.rs  lib.rs  main.rs  style.rs  ui.rs  view_data.rs
src/entities/: comment.rs  comments.rs  idea.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
src/migrator/: m20240915_000001_create_ideas_table.rs  mod.rs
src/popups/: comment.rs  edit.rs  idea.rs  mod.rs
src/ui/: idea.rs  ideas.rs  mod.rs
src/view_data/: counter.rs  db_type.rs  idea.rs  mod.rs  search_query.rs
