[package]
name = "verneanbud"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.28.1"
futures = "0.3.30"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-async-std-rustls", "macros"] }
sea-orm-migration = "1.0.1"
log = "0.4.22"
